Added database_auth0_url to environment variables.

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -5,6 +5,7 @@ development:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  database_auth0_url: "https://ncimatch.auth0.com/oauth/ro"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
@@ -27,6 +28,7 @@ test:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  database_auth0_url: "https://ncimatch.auth0.com/oauth/ro"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEK70F9"
   icon_emoji: ":face_with_head_bandage:"
@@ -50,6 +52,7 @@ uat:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  database_auth0_url: "https://ncimatch.auth0.com/oauth/ro"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEA2XQW"
   icon_emoji: ":face_with_head_bandage:"
