Adding environment variable to readme, env yaml and auth0 func.

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -5,7 +5,7 @@ development:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
-  database_auth0_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
@@ -28,7 +28,8 @@ test:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
-  database_auth0_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_username: "ped-matchbox-dev@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEK70F9"
   icon_emoji: ":face_with_head_bandage:"
@@ -52,7 +53,8 @@ uat:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
-  database_auth0_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_username: "ped-matchbox-dev@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEA2XQW"
   icon_emoji: ":face_with_head_bandage:"
@@ -76,6 +78,8 @@ production:
   patient_post_path: "/api/v1/patients/variant_report"
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
+  auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_username: "ped-matchbox-dev@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEFKYN9"
   icon_emoji: ":face_with_head_bandage:"
