adding auth0 username to env variables.

--- a/config/environment.yml
+++ b/config/environment.yml
@@ -6,6 +6,7 @@ development:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
+  auth0_username: "ped-matchbox-dev@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NE9M08N"
   icon_emoji: ":face_with_head_bandage:"
@@ -29,7 +30,7 @@ test:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
-  auth0_username: "ped-matchbox-dev@mail.nih.gov"
+  auth0_username: "ped-matchbox-int@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEK70F9"
   icon_emoji: ":face_with_head_bandage:"
@@ -54,7 +55,7 @@ uat:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
-  auth0_username: "ped-matchbox-dev@mail.nih.gov"
+  auth0_username: "ped-matchbox-uat@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEA2XQW"
   icon_emoji: ":face_with_head_bandage:"
@@ -79,7 +80,7 @@ production:
   rule_path: "/api/v1/rules/sample_control_report/"
   shipments_path: "/api/v1/patients/shipments/"
   auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
-  auth0_username: "ped-matchbox-dev@mail.nih.gov"
+  auth0_username: "ped-matchbox@mail.nih.gov"
   bot_name: "ir_ecosystem_bot"
   slack_channel_id: "C2NEFKYN9"
   icon_emoji: ":face_with_head_bandage:"
