--- a/tests/config/environment.yml
+++ b/tests/config/environment.yml
@@ -44,4 +44,4 @@ test:
   aws_download_time_limit: 600
   aws_upload_time_limit: 600
   auth0_database_url: "https://ncimatch.auth0.com/oauth/ro"
-  auth0_username: "ped-matchbox-dev@mail.nih.gov"
+  auth0_username: "ped-matchbox-int@mail.nih.gov"
