--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
     echo "TravisBuildID=$TRAVIS_BUILD_ID" >> build_number.html    &&
     echo "Author=$AUTHOR" >> build_number.html              &&
     echo "BuildTime=$DATE" >> build_number.html             &&
-    echo "Docker=$DOCKER_IMAGE:$DATE" >> build_number.html
+    echo "Docker=$DOCKER_IMAGE1:$DATE" >> build_number.html
   - cat ./build_number.html
 install: pip install -r requirements.txt
 script:
